fix: css overlap issue on build

--- a/src/components/Modal/Upload/uploadModal.css
+++ b/src/components/Modal/Upload/uploadModal.css
@@ -1,5 +1,25 @@
 /* modal-upload */
+.modal-upload-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .modal-upload {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 2rem;
     width: 800px;
     height: 464px;
 }
